<resources>
    <string name="app_name">ScrapbookWidget</string>
    <string name="appwidget_text">Scrapbook Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">App widget layout preview</string>

    <string name="web_client_id" translatable="false">52208309642-lc1rio2i3uf5220hhvmpd9cqgom2dcfi.apps.googleusercontent.com</string>

    <!-- Auth Login -->
    <string name="login_welcome">Welcome back!</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>

    <!-- Auth Register -->
    <string name="register_welcome">Create Account</string>
    <string name="register_subtitle">Sign up to get started</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Login</string>

    <!-- Group Selection -->
    <string name="select_group">Select Group</string>
    <string name="loading_groups">Loading groups...</string>
    <string name="no_groups_found">No groups found</string>
    <string name="switch_group">Switch Group</string>

    <!-- Create Group -->
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_avatar">Group Avatar</string>
    <string name="create">Create</string>
    <string name="creating_group">Creating group...</string>
    <string name="group_created_successfully">Group created successfully</string>
    <string name="failed_to_create_group">Failed to create group</string>
    <string name="invite_members">Invite Members</string>
    <string name="search_users">Search users...</string>
    <string name="create_group_subtitle">Start a new scrapbook with friends</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="edit_name">Edit name</string>
    <string name="change_email">Change email address</string>
    <string name="support">Support</string>
    <string name="make_suggestion">Make a suggestion</string>
    <string name="report_problem">Report a problem</string>
    <string name="privacy_and_safety">Privacy and safety</string>
    <string name="blocked_accounts">Blocked accounts</string>
    <string name="privacy_and_data">Privacy and Data</string>
    <string name="about">About</string>
    <string name="tiktok">TikTok</string>
    <string name="instagram">Instagram</string>
    <string name="x_twitter">X (Twitter)</string>
    <string name="share_locket">Share Locket</string>
    <string name="rate_locket">Rate Locket</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="delete_account">Delete account</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="back">Back</string>
    <string name="close">Close</string>

    <!-- New Settings strings -->
    <string name="edit_photo">Edit Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="memory_on_date">Memory on %1$s</string>
    <string name="memory_story_meta">%1$s with %2$s</string>
    <string name="memory_story_today">Today</string>
    <string name="memory_story_tagged_empty">your friends</string>
    <string name="memory_content_description">Memory photo</string>
    <string name="get_locket_gold">Get Scrapbook Premium</string>
    <string name="premium_plan">Get Scrapbook Premium</string>
    <string name="locket_gold_subtitle">Unlock the best of Scrapbook</string>
    <string name="rollcall">Rollcall</string>
    <string name="rollcall_subtitle">Happening now!</string>
    <string name="pick_yours">PICK YOURS</string>
    <string name="invite_friends">Invite friends to Scrapbook!</string>
    <string name="widget_setup">Widget Setup</string>
    <string name="how_to_add_widget">How to add the widget</string>
    <string name="streak_on_widget">Streak on widget</string>

    <!-- Group Settings -->
    <string name="group_settings">Group Settings</string>
    <string name="group_info">Group Info</string>
    <string name="edit_group">Edit Group</string>
    <string name="members">Members</string>
    <string name="invitations">Invitations</string>
    <string name="leave_group">Leave Group</string>
    <string name="change_group_name">Change group name</string>
    <string name="change_group_avatar">Change group avatar</string>
    <string name="view_member_list">View member list</string>
    <string name="invite_users">Invite users</string>
    <string name="share_invite_link">Share Invite Link</string>
    <string name="manage_invitations">Manage invitations</string>
    <string name="leave_group_warning">Are you sure you want to leave this group?</string>
    <string name="invite_link_share_message">Let\'s make memory with me! Click here: %1$s</string>
    <string name="invite_link_login_required">Please log in to join this group</string>
    <string name="joining_group">Joining group...</string>

    <!-- New Page / Premium strings -->
    <string name="add_new_page">Add New Page</string>
    <string name="upgrade_to_add_more">Please upgrade your plan to continue adding pages.</string>
</resources>
